eyelib-molang/src/test/resources/io/github/tt432/eyelibmolang/compiler/corpus/phase1/invalid-parse-golden/missing-root-parse-golden.molangcase
---
id: invalid.parse-golden.missing-root
layer: internal
evidence: internal
assertions:
  - parse-accept
---
q.delta_time
